[gd_scene load_steps=5 format=3 uid="uid://c2wfq8dyym4k5"]

[ext_resource type="Script" path="res://Instances/Enemies/Director/TheDirector.gd" id="1_g77ek"]
[ext_resource type="Script" path="res://Instances/Enemies/Director/EnemyMap.gd" id="2_0gdeh"]
[ext_resource type="PackedScene" uid="uid://wm6wij6airkb" path="res://Instances/Enemies/Triangle/Triangle.tscn" id="3_wxirh"]
[ext_resource type="Script" path="res://Instances/Enemies/Director/EnemyQueue.gd" id="4_dldxy"]

[node name="TheDirector" type="Node"]
script = ExtResource( "1_g77ek" )

[node name="EnemyQueue" type="Node" parent="."]
script = ExtResource( "4_dldxy" )

[node name="EnemyMap" type="Node" parent="EnemyQueue"]
script = ExtResource( "2_0gdeh" )
triangle = ExtResource( "3_wxirh" )

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 2.5

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
